fix: mobile overflow

--- a/src/index.scss
+++ b/src/index.scss
@@ -29,8 +29,9 @@ body {
 }
 
 .App {
-  max-width: 100vw;
-  overflow-x: hidden;
+  position: relative;
+  max-width: 100%;
+  overflow: hidden;
 }
 
 .loading {
